Fixed navigation links and JavaScript importation

--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,6 +1,9 @@
 main {
 	padding-top: 2rem;
 }
+.visible{
+	display: block;
+}
 .background{
 	background-image: url("../images/plans-background.jpg");
 	background-repeat: no-repeat;
