--- a/packages/packages.css
+++ b/packages/packages.css
@@ -4,16 +4,13 @@ main {
 .visible{
 	display: block;
 }
-.background{
-	background-image: url("../images/plans-background.jpg");
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	z-index: -1;
-	
+.background {
+    background: url("../images/plans-background.jpg") center/cover;
+    filter: grayscale(40%);
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    z-index: -1;
 }
 
 .package {
@@ -80,4 +77,19 @@ main {
 }
 #premium .package__subtitle{
     color: bbb;
+}
+
+@media (min-width: 40rem){
+	main{
+		margin: 3rem auto;
+		max-width: 93.75rem;
+	}
+}
+@media (min-width: 93.75rem){
+	.package{
+		border-left: 4px solid #0e4f1f;
+	}
+	#free{
+		border-right: 4px solid #0e4f1f;
+	}
 }
