--- a/style.css
+++ b/style.css
@@ -7,18 +7,11 @@ body {
 }
 #product-overview {
 	background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
-		url("images/freedom.jpg") left 10% bottom 70% / cover no-repeat
-			border-box,
-		#ff1b68;
+		url("images/freedom.jpg") center / cover no-repeat border-box, #ff1b68;
 	width: 100vw;
-	height: 35vh;
+	height: 33vh;
 	margin-top: 2.75rem;
 	position: relative;
-}
-
-.section-title {
-	color: #2ddf5c;
-	text-align: center;
 }
 
 #product-overview h1 {
@@ -28,21 +21,38 @@ body {
 	position: absolute;
 	bottom: 5%;
 	left: 3%;
+	font-size: 1.6rem;
 }
 
-.plan__list {
+@media (min-width: 40rem) and (min-height: 40rem) {
+	#product-overview {
+		height: 40vh;
+		background-position: 50% 25%;
+	}
+	#product-overview h1 {
+		font-size: 2.4rem;
+	}
+}
+
+.section-title {
+	color: #2ddf5c;
+	text-align: center;
+}
+
+/* .plan__list {
 	width: 80%;
 	margin: auto;
 	text-align: center;
-}
+} */
 .plan {
 	background-color: #d5ffdc;
 	text-align: center;
 	padding: 1rem;
-	margin: 0.5rem;
-	display: inline-block;
-	width: 30%;
-	vertical-align: middle;
+	margin: 0;
+	/* min-width: 12.5rem; 0.5rem */
+	/* display: inline-block; */
+	/* width: 30%; */
+	/* vertical-align: middle; */
 }
 .plan__features {
 	list-style-type: none;
@@ -50,13 +60,14 @@ body {
 	padding: 0;
 }
 .plan__features li {
-	margin: 0.5rem 0;
+	margin: 0;
 }
 
 .plan--highlighted {
 	color: white;
 	background-color: #19b84c;
-	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+	margin: 0.5rem 0; /* 0.5rem 0*/
+	/* box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5); */
 }
 .plan__annotation {
 	background-color: white;
@@ -125,7 +136,7 @@ body {
 	border-color: #ff5454;
 }
 
-.visible{
+.visible {
 	display: block;
 }
 .plan--highlighted .plan__price {
@@ -135,6 +146,24 @@ body {
 	color: white;
 }
 
+@media (min-width: 43.3rem) {
+	.plan {
+		margin: 0.5rem;
+		display: inline-block;
+		width: 30%;
+		vertical-align: middle;
+		max-width: 25rem;
+	}
+	.plan__list {
+		width: 80%;
+		margin: auto;
+		text-align: center;
+	}
+	.plan--highlighted {
+		margin: 0.5rem 0; /* 0.5rem 0*/
+		box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+	}
+}
 #key-features {
 	background-color: #ff1b68;
 	margin-top: 5rem;
@@ -161,14 +190,22 @@ body {
 	margin: 0;
 }
 .key-feature {
-	display: inline-block;
-	width: 30%;
 	text-align: center;
-	vertical-align: top;
 }
 .key-feature__description {
 	color: white;
 	text-align: center;
 	font-weight: bold;
 	font-size: 1.2rem;
+}
+@media (min-width: 43.3rem){
+	.key-feature{
+		display: inline-block;
+		width: 30%;
+		vertical-align: top;
+		max-width: 25rem;
+	}
+	.key-feature__image{
+		padding: 1.2rem;
+	}
 }
