--- a/style.css
+++ b/style.css
@@ -39,20 +39,12 @@ body {
 	text-align: center;
 }
 
-/* .plan__list {
-	width: 80%;
-	margin: auto;
-	text-align: center;
-} */
 .plan {
 	background-color: #d5ffdc;
 	text-align: center;
 	padding: 1rem;
 	margin: 0;
-	/* min-width: 12.5rem; 0.5rem */
-	/* display: inline-block; */
-	/* width: 30%; */
-	/* vertical-align: middle; */
+	
 }
 .plan__features {
 	list-style-type: none;
@@ -66,8 +58,7 @@ body {
 .plan--highlighted {
 	color: white;
 	background-color: #19b84c;
-	margin: 0.5rem 0; /* 0.5rem 0*/
-	/* box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5); */
+	margin: 0.5rem 0; 
 }
 .plan__annotation {
 	background-color: white;
@@ -160,7 +151,7 @@ body {
 		text-align: center;
 	}
 	.plan--highlighted {
-		margin: 0.5rem 0; /* 0.5rem 0*/
+		margin: 0.5rem 0; 
 		box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 	}
 }
