--- a/customers/customers.css
+++ b/customers/customers.css
@@ -1,12 +1,11 @@
+main{
+	padding-top: 2.5rem;
+}
 .visible{
 	display: block;
 }
 .testimonial {
 	font-size: 1.2rem;
-}
-
-.testimonial:first-of-type {
-	margin-top: 6rem;
 }
 
 .testimonial__image-container {
@@ -34,7 +33,7 @@
 }
 
 .testimonial__name {
-	margin: 0.1rem;
+	margin: 0.2rem;
     color: #ff5454;
     font-size: 2rem;
 }
