--- a/shared.css
+++ b/shared.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500&display=swap');
+
 * {
 	box-sizing: border-box;
 }
@@ -65,7 +67,7 @@ main {
 	color: #0e4f1f;
 	font-weight: bold;
 	font-size: 1.375rem;
-	height: 2rem;
+	height: 2.5rem;
 	vertical-align: middle;
 	display: inline-block;
 }
