--- a/customers/customers.css
+++ b/customers/customers.css
@@ -1,7 +1,3 @@
-body{
-	font-family: 'Manrope', sans-serif;
-}
-
 main{
 	padding-top: 2.5rem;
 }
@@ -65,10 +61,11 @@ main{
 	.testimonial{
 		margin: 3rem auto;
 		max-width: 93.75rem;
+		display: flex;
+		align-items: center;
+		justify-content: space-around;
 	}
 	.testimonial__info{
-		display: inline-block;
-		vertical-align: middle;
 		width: 30%;
 	}
 	.testimonial__image-container {
