--- a/shared.css
+++ b/shared.css
@@ -1,17 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 * {
 	box-sizing: border-box;
 }
 body {
-	font-family: "Manrope", sans-serif;
-	margin: 0;
+	font-family: "Montserrat", sans-serif;
 }
 
 main {
 	min-height: calc(100vh - 3.5rem - 8rem);
 	margin-top: 3.5rem;
-  }
+}
 .backdrop {
 	width: 100vw;
 	height: 100vh;
@@ -32,12 +30,10 @@ main {
 	position: fixed;
 	top: 0;
 	right: 0;
-	z-index: 1;
-}
-
-.main-header > div {
-	display: inline-block;
-	vertical-align: middle;
+	z-index: 100;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .toggle-button {
@@ -68,11 +64,10 @@ main {
 	font-weight: bold;
 	font-size: 1.375rem;
 	height: 2.5rem;
-	vertical-align: middle;
-	display: inline-block;
 }
 .main-header__brand img {
-	height: 100%;
+	height: 2.5rem;
+	vertical-align: middle;
 }
 
 .main-nav {
@@ -83,10 +78,10 @@ main {
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
+	display: flex;
 }
 
 .main-nav__item {
-	display: inline-block;
 	margin: 0 1rem;
 }
 
@@ -125,10 +120,7 @@ main {
 		display: none;
 	}
 	.main-nav {
-		display: inline-block;
-		text-align: right;
-		width: calc(100% - 44px);
-		vertical-align: middle;
+		display: flex;
 	}
 }
 .main-footer {
@@ -140,11 +132,12 @@ main {
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
-	text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 .main-footer__link {
-	display: block;
-	margin: 1rem 0;
+	margin: 0.5rem 0;
 }
 .main-footer__links a {
 	text-decoration: none;
@@ -170,9 +163,12 @@ main {
 	width: 90%;
 	height: 100%;
 	list-style: none;
-	margin: 10% auto;
+	margin: 0;
 	padding: 0;
-	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .mobile-nav__item {
@@ -201,20 +197,24 @@ main {
 .button:focus {
 	outline: none;
 }
-.button[disabled]{
+.button[disabled] {
 	cursor: not-allowed;
 	border: #a1a1a1;
 	background-color: #ccc;
 	color: #a1a1a1;
 }
 
-.open{
+.open {
 	display: block !important;
 }
 
 @media (min-width: 40rem) {
 	.main-footer__link {
-		display: inline-block;
 		margin: 0 1rem;
+	}
+
+	.main-footer__links {
+		flex-direction: row;
+		justify-content: center;
 	}
 }
