--- a/start-hosting/start-hosting.css
+++ b/start-hosting/start-hosting.css
@@ -1,4 +1,4 @@
-body{
+body {
 	font-family: "Montserrat", sans-serif;
 }
 
@@ -14,6 +14,9 @@ main {
 
 .signup-form {
 	padding: 1rem;
+	display: grid;
+	row-gap: 1rem;
+	column-gap: 0.5rem;
 }
 
 .signup-form label {
@@ -23,7 +26,7 @@ main {
 .signup-form input,
 .signup-form select {
 	display: block;
-	margin-top: 1rem;
+	/* margin-top: 1rem; */
 	width: 100%;
 }
 
@@ -69,6 +72,9 @@ main {
 @media (min-width: 40rem) {
 	.signup-form {
 		margin: auto;
-		width: 25rem;
+		width: 30rem;
+		grid-template-columns: 10rem auto;
+		row-gap: 1rem;
+		column-gap: 0.5rem;
 	}
 }
