--- a/packages/packages.css
+++ b/packages/packages.css
@@ -23,6 +23,7 @@ body{
 	border: solid 4px #0e4f1f;
 	border-left: none;
 	position: relative;
+	overflow: hidden;
 }
 .package:hover, 
 .package:active{
@@ -43,12 +44,14 @@ body{
 	position: absolute;
 	top: 0;
 	right: 0;
+	margin: 0;
 	padding: 0.5rem;
 	font-size: 0.8rem;
-	margin: 1.2rem;
 	font-weight: bold;
 	font-family: inherit;
-	border-radius: 8px;
+	transform: rotate(45deg) translate(3.5rem, -1rem);
+	width: 12rem;
+	text-align: center;
 }
 .package__subtitle {
 	color: #979797;
@@ -80,7 +83,7 @@ body{
     color: white;
 }
 #premium .package__subtitle{
-    color: bbb;
+    color: #bbb;
 }
 
 @media (min-width: 40rem){
