--- a/style.css
+++ b/style.css
@@ -77,7 +77,9 @@ body {
 }
 .modal {
 	position: fixed;
-	display: none;
+	opacity: 0;
+	transform: translateY(-3rem);
+	transition: opacity 200ms ease, transform 200ms;
 	z-index: 200;
 	background: white;
 	border-radius: 10px;
@@ -88,6 +90,7 @@ body {
 	border: 1px solid #ccc;
 	outline: none;
 	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+	
 }
 
 .modal__title {
