--- a/customers/customers.css
+++ b/customers/customers.css
@@ -1,7 +1,9 @@
-main{
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
+main {
 	padding-top: 2.5rem;
 }
-.visible{
+.visible {
 	display: block;
 }
 .testimonial {
@@ -9,8 +11,9 @@ main{
 }
 
 .testimonial__image-container {
-    width: 100%;
-    max-width: 40rem;
+	width: 100%;
+	max-width: 40rem;
+	-webkit-box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.3);
 	box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.3);
 }
 
@@ -34,8 +37,8 @@ main{
 
 .testimonial__name {
 	margin: 0.2rem;
-    color: #ff5454;
-    font-size: 2rem;
+	color: #ff5454;
+	font-size: 2rem;
 }
 
 .testimonial__subtitle {
@@ -55,17 +58,22 @@ main{
 }
 
 .testimonial__text {
-    margin: 0.2rem;
+	margin: 0.2rem;
 }
-@media (min-width: 40rem){
-	.testimonial{
+@media (min-width: 40rem) {
+	.testimonial {
 		margin: 3rem auto;
 		max-width: 93.75rem;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
 		align-items: center;
+		-ms-flex-pack: distribute;
 		justify-content: space-around;
 	}
-	.testimonial__info{
+	.testimonial__info {
 		width: 30%;
 	}
 	.testimonial__image-container {
@@ -73,5 +81,4 @@ main{
 		vertical-align: middle;
 		width: 66%;
 	}
-
 }
