--- a/start-hosting/start-hosting.css
+++ b/start-hosting/start-hosting.css
@@ -1,3 +1,5 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 body {
 	font-family: "Montserrat", sans-serif;
 }
@@ -14,9 +16,12 @@ main {
 
 .signup-form {
 	padding: 1rem;
+	display: -ms-grid;
 	display: grid;
 	row-gap: 1rem;
-	column-gap: 0.5rem;
+	-webkit-column-gap: 0.5rem;
+	   -moz-column-gap: 0.5rem;
+	        column-gap: 0.5rem;
 }
 
 .signup-form label {
@@ -73,8 +78,11 @@ main {
 	.signup-form {
 		margin: auto;
 		width: 30rem;
+		-ms-grid-columns: 10rem 0.5rem auto;
 		grid-template-columns: 10rem auto;
 		row-gap: 1rem;
-		column-gap: 0.5rem;
+		-webkit-column-gap: 0.5rem;
+		   -moz-column-gap: 0.5rem;
+		        column-gap: 0.5rem;
 	}
 }
