--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 * {
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
 body {
@@ -6,11 +9,24 @@ body {
 	width: 100%;
 }
 #product-overview {
+	background: -webkit-gradient(
+			linear,
+			left bottom,
+			left top,
+			color-stop(10%, rgba(80, 68, 18, 0.6)),
+			to(transparent)
+		),
+		url("images/freedom.jpg") center / cover no-repeat border-box, #ff1b68;
+	background: -o-linear-gradient(
+			bottom,
+			rgba(80, 68, 18, 0.6) 10%,
+			transparent
+		),
+		url("images/freedom.jpg") center / cover no-repeat border-box, #ff1b68;
 	background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
 		url("images/freedom.jpg") center / cover no-repeat border-box, #ff1b68;
 	width: 100vw;
 	height: 33vh;
-	/* margin-top: 2.75rem; */
 	position: relative;
 }
 
@@ -44,28 +60,35 @@ body {
 	padding: 1rem;
 	text-align: center;
 	margin: 0.5rem 0;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
 	flex-direction: column;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
-	
 }
 .plan__features {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 }
-.plan__feature{
+.plan__feature {
 	margin: 0.5rem 0;
 }
 
 .plan--highlighted {
 	color: white;
 	background-color: #19b84c;
-	margin: 0.5rem 0; 
+	margin: 0.5rem 0;
 }
 .plan__annotation {
 	background-color: white;
 	color: #19b84c;
+	-webkit-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 	padding: 0.5rem;
 	border-radius: 8px;
@@ -80,8 +103,14 @@ body {
 .modal {
 	position: fixed;
 	opacity: 0;
+	-webkit-transform: translateY(-3rem);
+	-ms-transform: translateY(-3rem);
 	transform: translateY(-3rem);
+	-webkit-transition: opacity 200ms ease, -webkit-transform 200ms;
+	transition: opacity 200ms ease, -webkit-transform 200ms;
+	-o-transition: opacity 200ms ease, transform 200ms;
 	transition: opacity 200ms ease, transform 200ms;
+	transition: opacity 200ms ease, transform 200ms, -webkit-transform 200ms;
 	z-index: 200;
 	background: white;
 	border-radius: 10px;
@@ -91,8 +120,8 @@ body {
 	padding: 2rem;
 	border: 1px solid #ccc;
 	outline: none;
+	-webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-	
 }
 
 .modal__title {
@@ -147,27 +176,48 @@ body {
 	.plan__list {
 		width: 100%;
 		margin: auto;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
+		-webkit-box-orient: horizontal;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: row;
 		flex-direction: row;
+		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
+		-webkit-box-pack: center;
+		-ms-flex-pack: center;
 		justify-content: center;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
 		align-items: center;
 	}
-	
+
 	.plan {
 		width: 30%;
 		min-width: 13rem;
 		max-width: 25rem;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
 		flex-direction: column;
+		-webkit-box-pack: center;
+		-ms-flex-pack: center;
 		justify-content: center;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
 		align-items: center;
+		-ms-flex-line-pack: center;
 		align-content: center;
 		height: 28rem;
 	}
-	
+
 	.plan--highlighted {
-		margin: 0.5rem 0; 
+		margin: 0.5rem 0;
+		-webkit-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 		box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 		height: 30rem;
 		z-index: 1;
@@ -207,17 +257,23 @@ body {
 	font-weight: bold;
 	font-size: 1.2rem;
 }
-@media (min-width: 40rem){
-	.key-feature{
+@media (min-width: 40rem) {
+	.key-feature {
 		width: 30%;
 		max-width: 25rem;
 	}
-	.key-feature__list{
+	.key-feature__list {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
+		-webkit-box-pack: center;
+		-ms-flex-pack: center;
 		justify-content: center;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
 		align-items: center;
 	}
-	.key-feature__image{
+	.key-feature__image {
 		padding: 1.2rem;
 	}
 }
